--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,7 +19,10 @@
     "loglevel": "^1.9.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
+    "react-chat-elements": "^12.0.14",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "yup": "^1.4.0"
