--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "loglevel": "^1.9.1",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
@@ -38,7 +39,7 @@
     "eslint-config-next": "14.2.3",
     "loglevel-plugin-prefix": "^0.8.4",
     "postcss": "^8",
-    "prisma": "^5.13.0",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
